removed margins and padding from body/html, pressing right no longer pushes into white space

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body, html {
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
 }
 
 #animation {
